--- a/input.scss
+++ b/input.scss
@@ -9,7 +9,7 @@ $vui-input-padding: px-to-base-rem(8) !default;
 @mixin vui-input() {
 
 		background-color: $vui-color-white;
-		border: 1px solid $vui-color-titanius;
+		border: 1px solid red;
 		border-radius: $vui-input-borderRadius;
 		box-shadow: inset 0 3px 0 0 $vui-color-woolonardo;
 		box-sizing: border-box;
@@ -28,7 +28,7 @@ $vui-input-padding: px-to-base-rem(8) !default;
 
 		&:focus {
 			border-color: $vui-color-celestine;
-			border-width: 2px;
+			border-width: 1px;
 			outline-width: 0;
 			padding: px-to-base-rem(7);
 		}
